<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <EditText
        android:id="@+id/addBookTitleEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity=""
        android:hint="@string/AddBookTitle"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <EditText
        android:id="@+id/addBookAuthorEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity=""
        android:hint="@string/AddBookAuthor"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookTitleEditTxt"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/addBookYearEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity=""
        android:hint="@string/AddBookYear"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookAuthorEditTxt"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/addBookDescriptionEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity=""
        android:hint="@string/AddBookDescription"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookYearEditTxt"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/addBookISBNEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity=""
        android:hint="@string/AddBookISBN"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookDescriptionEditTxt"
        app:layout_constraintVertical_bias="0.05"
        />

    <Switch
        android:id="@+id/addBookSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/AddBookISBN"
        android:text="@string/AddBookSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookISBNEditTxt"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/addBookSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="5"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/AddBookSaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBookSwitch"
        app:layout_constraintVertical_bias="0.05"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
