<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewBookActivity">

    <TextView
        android:id="@+id/bookEbookTxtViewR"
        android:layout_width="189dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookISBNTxtViewR" />

    <TextView
        android:id="@+id/bookEbookTxtViewL"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:text="@string/e_book_available"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookISBNTxtViewL" />

    <TextView
        android:id="@+id/bookISBNTxtViewR"
        android:layout_width="189dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookDescriptionTxtViewR" />

    <TextView
        android:id="@+id/bookISBNTxtViewL"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:text="@string/AddBookISBN"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookDescriptionTxtViewL" />

    <TextView
        android:id="@+id/bookDescriptionTxtViewR"
        android:layout_width="189dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookYearTxtViewR" />

    <TextView
        android:id="@+id/bookDescriptionTxtViewL"
        android:layout_width="108dp"
        android:layout_height="120dp"
        android:text="@string/AddBookDescription"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookYearTxtViewL" />

    <TextView
        android:id="@+id/bookYearTxtViewR"
        android:layout_width="189dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthorTxtViewR" />

    <TextView
        android:id="@+id/bookYearTxtViewL"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:text="@string/AddBookYear"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthorTxtViewL" />

    <TextView
        android:id="@+id/bookAuthorTxtViewR"
        android:layout_width="189dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bookTitleTxtViewR" />

    <TextView
        android:id="@+id/bookAuthorTxtViewL"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:text="@string/AddBookAuthor"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/bookTitleTxtViewL" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/bookTitleTxtViewL"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:text="@string/AddBookTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/bookTitleTxtViewR"
        android:layout_width="189dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>